--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-preset-stage-2": "^6.22.0",
     "bcoin": "^1.0.0-beta.11",
     "material-ui": "^0.17.1",
